--- a/AppMaui-NumeroDaSorte/AppMaui-NumeroDaSorte.csproj
+++ b/AppMaui-NumeroDaSorte/AppMaui-NumeroDaSorte.csproj
@@ -110,4 +110,10 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="8.0.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <MauiXaml Update="MainPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
+	</ItemGroup>
+
 </Project>
