--- a/AppMaui-NumeroDaSorte/AppMaui-NumeroDaSorte.csproj
+++ b/AppMaui-NumeroDaSorte/AppMaui-NumeroDaSorte.csproj
@@ -95,13 +95,16 @@
 
 		<!-- Images -->
 		<MauiImage Include="Resources\Images\*" />
-		<MauiImage Update="Resources\Images\dotnet_bot.png" Resize="True" BaseSize="300,185" />
 
 		<!-- Custom Fonts -->
 		<MauiFont Include="Resources\Fonts\*" />
 
 		<!-- Raw Assets (also remove the "Resources\Raw" prefix) -->
 		<MauiAsset Include="Resources\Raw\**" LogicalName="%(RecursiveDir)%(Filename)%(Extension)" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Remove="Resources\Images\logo_green.svg" />
 	</ItemGroup>
 
 	<ItemGroup>
